Progressively enhance layout selection
- display URL inputs laid out as the current layout, so its
  much clearer which goes here
- highlight the current layout

--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -24,3 +24,20 @@ ol li {
   height: 50px;
   width: 50px;
 }
+
+.js-enhanced ol li {
+  list-style: none;
+}
+
+.js-enhanced section.layout ol li {
+  display: inline-block;
+}
+
+.js-enhanced section.layout ol li.selected .layout {
+  background: orange;
+}
+
+.js-enhanced section.urls ol {
+  height: 300px;
+}
+
