Allow document title to be set by query param
So the title can be used to disambiguate many frame split tabs, and/or
can be bookmarked with a meaninful name.

Expose it in the build interface too.

--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -20,6 +20,12 @@ ol li {
   list-style-position: inside;
 }
 
+.title input {
+  min-width: 300px;
+  font-size: 16px;
+  margin-left: .25em;
+}
+
 .layout-thumb {
   height: 50px;
   width: 50px;
