--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,9 @@ html, body {
 
 .layout-2col .item { width: 50%; }
 
+.layout-2col-75-25 .item:first-child { width: 75%; }
+.layout-2col-75-25 .item { width: 25%; }
+
 .layout-3row .item { height: 33.3%; }
 
 .layout-3col .item { width: 33.3%; }
